--- a/build-ready/manifest.json
+++ b/build-ready/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SushiSwap",
-  "name": "SushiSwap",
+  "short_name": "Fedswap",
+  "name": "Fedswap",
   "icons": [
     {
       "src": "./logo.png",
